--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,11 +61,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - flutter_logo.png
-     - ghana.png
-     - korea.png
-     - portugal.png
-     - uruguay.png
+     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
