--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,12 @@ migrate_working_dir/
 # is commented out by default.
 #.vscode/
 
+# Google Services (e.g. APIs or Firebase)
+google-services.json
+firebase_options.dart
+firebase_app_id_file.json
+GoogleService-info.plist
+
 # Flutter/Dart/Pub related
 **/doc/api/
 **/ios/Flutter/.last_build_id
