--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.0.1
   firebase_auth: ^4.1.1
   modal_progress_hud_nsn: ^0.3.0
+  cloud_firestore: ^4.0.5
 
 dev_dependencies:
   flutter_test:
