--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.1.1
   modal_progress_hud_nsn: ^0.3.0
   cloud_firestore: ^4.0.5
+  flutter_chat_bubble: ^2.0.0
 
 dev_dependencies:
   flutter_test:
